vcluster_versioned_docs/version-0.27.0/quick-start-guide.mdx
---
title: Quick Start Guide
sidebar_position: 1
slug: /
description: Learn how to configure, deploy, use, and delete a vCluster instance.
sidebar_class_name: host-nodes private-nodes standalone
---

import Flow, { Step } from "@site/src/components/Flow";

import KeyConcepts from './_partials/quick-start-guide/key-concepts.mdx' 
import PreRequisites from './_partials/quick-start-guide/pre-requisites.mdx' 
import DeployVclusterWithCLI from './_partials/quick-start-guide/deploy-vcluster-with-cli.mdx' 
import DeployResources from './_partials/quick-start-guide/deploy-resources.mdx' 
import ViewHostResources from './_partials/quick-start-guide/view-host-resources.mdx' 
import ExploreFeatures from './_partials/quick-start-guide/explore-features.mdx'


## Key concepts

<KeyConcepts />

## Prerequisites

<PreRequisites />

## Configure vCluster

The guide assumes the default configuration of a vCluster using shared nodes:

* Single vCluster control plane pod
* All worker nodes of the host cluster are available for the virtual cluster
* All resources will sync to the same namespace of the vCluster control plane pod

Read more about [vcluster.yaml](./configure/what-is-vcluster-yaml) and [how to configure a different tenancy model](./configure/tenancy-model).

## Deploy vCluster

Deploy a vCluster instance called `my-vcluster` to namespace `team-x`. This guide uses the vCluster CLI to deploy vCluster, but there are multiple ways to deploy vCluster using other tools like Helm, Terraform, ArgoCD, ClusterAPI, etc. Read about the additional options in the [deployment section of the docs](./deploy/control-plane/container/basics). 

<DeployVclusterWithCLI />

## Use your virtual cluster

After immediately creating your virtual cluster, your kube context is updated to point to the virtual cluster and all these commands are directed at the virtual cluster. 

### Deploy resources inside the virtual cluster

<DeployResources />

### View resources inside the host cluster

<ViewHostResources />

## Explore features

<ExploreFeatures />

## Delete vCluster

Deleting a vCluster also deletes all resources within the virtual cluster and all states related to the vCluster. If the namespace on the host cluster was created by the vCluster CLI, then that namespace is also deleted. 

```bash
vcluster delete my-vcluster --namespace team-x
```